.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Role_Entitlement__c.object
<CustomObject>
    <fields>
        <fullName>xcdhcm__Additional_CLE__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Additional Leave entitlement for employee which differs from Company standard entitlement - updates annually from master record on Job Role.</description>
        <inlineHelpText>Additional leave entitlement as a result of the Employee&apos;s individual contractual terms</inlineHelpText>
        <label>(+) Contractual</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Additional_JRS__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Records any additional leave entitlement which accrues to the employee because of their Job Role or seniority in the organisation.</description>
        <inlineHelpText>Additional leave entitlement which accrues to the employee because of their Job Role or seniority in the organisation</inlineHelpText>
        <label>(+) Seniority</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Annual_Entitlement__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Sets annual entitlement for the Employee based on Company rules</description>
        <inlineHelpText>Company standard entitlement based on full year service</inlineHelpText>
        <label>Standard entitlement</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Days_in_role__c</fullName>
        <formula>MAX( (  xcdhcm__To__c  -  xcdhcm__From__c  ) + 1 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populate days in role based on To and From dates</inlineHelpText>
        <label>Days in role</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <formula>xcdhcm__Leave_Summary__r.xcdhcm__Employee_Details__c</formula>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__From__c</fullName>
        <description>Start date of the role</description>
        <formula>IF(  xcdhcm__Job_Role__r.xcdhcm__Start_Date__c  &gt;=   xcdhcm__Leave_Summary__r.xcdhcm__Leave_year_start_date__c  ,  xcdhcm__Job_Role__r.xcdhcm__Start_Date__c ,  xcdhcm__Leave_Summary__r.xcdhcm__Leave_year_start_date__c )</formula>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job Role</label>
        <referenceTo>xcdhcm__Job_Role__c</referenceTo>
        <relationshipLabel>Role Entitlements</relationshipLabel>
        <relationshipName>Role_Entitlements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_title__c</fullName>
        <description>Title of the Job Role</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, xcdhcm__Job_Role__r.Name)</formula>
        <label>Job title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_Summary__c</fullName>
        <label>Leave year</label>
        <referenceTo>xcdhcm__Leave_Summary__c</referenceTo>
        <relationshipLabel>Role Entitlements</relationshipLabel>
        <relationshipName>Role_Entitlements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaves_on_length_of_service__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Records additional leave on completion of a period of years&apos; service.</description>
        <inlineHelpText>Additional leave entitlement based on the employee&apos;s length of service</inlineHelpText>
        <label>(+) Length of service</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Part_time__c</fullName>
        <formula>IF(OR( ISPICKVAL(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c, &quot;Regular work pattern - hours&quot;),ISPICKVAL(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c, &quot;Irregular shift pattern&quot;),ISPICKVAL(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c, &quot;Work cycle - hours&quot;)), TEXT( ROUND(xcdhcm__Job_Role__r.xcdhcm__FTE__c * 100,0)) + &quot;%&quot;, IF(OR(ISPICKVAL(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c, &quot;Regular work pattern - days&quot;),ISPICKVAL(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c, &quot;Flexible working days&quot;),ISPICKVAL(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c, &quot;Work cycle - days&quot;)), TEXT( ROUND((xcdhcm__Job_Role__r.xcdhcm__Working_Days_Week__c /  xcdhcm__Job_Role__r.xcdhcm__Companies__r.xcdhcm__Normal_working_week_days__c) * 100,0)) + &quot;%&quot;, null))</formula>
        <inlineHelpText>For employees recording leave in hours equals FTE%; for employees recording leave in days, equals proportion of days in the week worked by the employee - e.g. for an employee working Mondays and Tuesdays equals 40% regardless of hours worked each day</inlineHelpText>
        <label>FTE%</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Public_Holidays__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Updates public holiday allowance</description>
        <inlineHelpText>Where an Employee normally works public holidays, an additional entitlement is given</inlineHelpText>
        <label>(+) Public holidays</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <formula>IF(AND(  xcdhcm__From__c  &lt;= TODAY(),  xcdhcm__To__c  &gt;= TODAY()), &quot;Current&quot;,  IF(AND(  xcdhcm__From__c  &lt; TODAY(),  xcdhcm__To__c  &lt; TODAY()), &quot;Previous&quot;,  
IF(AND(  xcdhcm__From__c  &gt; TODAY(),  xcdhcm__To__c  &gt; TODAY()), &quot;Future&quot;, &quot;Cancelled&quot;)))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__System_Run_entitlement_WF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to invoke workflow: Update entitlements</description>
        <label>System: Run entitlement WF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__To__c</fullName>
        <description>End date of the role</description>
        <formula>IF( xcdhcm__Job_Role__r.xcdhcm__End_Date__c  &lt;=  xcdhcm__Leave_Summary__r.xcdhcm__Leave_year_end_date__c , xcdhcm__Job_Role__r.xcdhcm__End_Date__c, xcdhcm__Leave_Summary__r.xcdhcm__Leave_year_end_date__c)</formula>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_entitlement__c</fullName>
        <description>Sum of all entitlements - rounded up to the next half day</description>
        <formula>CEILING( 2 * (xcdhcm__Additional_CLE__c  +  xcdhcm__Leaves_on_length_of_service__c  +  xcdhcm__Public_Holidays__c  +  xcdhcm__Additional_JRS__c  +  xcdhcm__Annual_Entitlement__c)) /2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all entitlements - rounded up to the next half day</inlineHelpText>
        <label>(=) Total entitlement</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Role Entitlement</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>xcdhcm__Job_title__c</columns>
        <columns>xcdhcm__Job_Role__c</columns>
        <columns>xcdhcm__Leave_Summary__c</columns>
        <columns>xcdhcm__Days_in_role__c</columns>
        <columns>xcdhcm__From__c</columns>
        <columns>xcdhcm__To__c</columns>
        <columns>xcdhcm__Part_time__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <columns>xcdhcm__Annual_Entitlement__c</columns>
        <columns>xcdhcm__Additional_CLE__c</columns>
        <columns>xcdhcm__Additional_JRS__c</columns>
        <columns>xcdhcm__Leaves_on_length_of_service__c</columns>
        <columns>xcdhcm__Public_Holidays__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Role title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Role Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>